fix: 스타일 수정

--- a/frontend/src/assets/reset.css
+++ b/frontend/src/assets/reset.css
@@ -1,3 +1,6 @@
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css');
+@import 'tailwindcss';
+
 *,
 *::before,
 *::after {
@@ -10,15 +13,18 @@ ul,
 ol {
     list-style: none;
 }
+
 a {
     text-decoration: none;
     color: inherit;
 }
+
 img {
     max-width: 100%;
     height: auto;
     display: block;
 }
+
 table {
     border-collapse: collapse;
 }
